# ternary

./: .gitignore  Cargo.toml  LICENSE_APACHE  LICENSE_MIT  README.md  index.html  index.js  output.txt  package-lock.json  package.json  styles.css  ternary.js  webpack.config.js
.github/: dependabot.yml
.github/workflows/: deploy.yml  rust.yml
benches/: bench.rs
src/: billiard.rs  comb.rs  equal.rs  guide.rs  helpers.rs  interpretations.rs  interval.rs  ji.rs  ji_ratio.rs  lattice.rs  lib.rs  main.rs  matrix.rs  monzo.rs  odd_limit_81.rs  plane_geometry.rs  primes.rs  simple_steps.rs  subgroup_monzo.rs  utils.rs  vector.rs  words.rs
static/: basic.css  index.html  results.html  results.js
