[package]
name = "ternary"
version = "0.0.0"
authors = ["inthar-raven <serotoceprafen@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
version = "0.0.0"

[profile.release]
debug = true

[dependencies]
slog = "2.5.2"
slog-term = "2.5.0"
slog-async = "2.4.0"

env_logger = "0.11.3"
actix-web = "4"
actix-files = "0.6.6"
actix-rt = { version = "2.10.0" }

serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0"

stacker = "0.1.15"

itertools = "0.13.0"

num-traits = "0.2.19"
num-integer = "0.1.46"
num-bigint = "0.4.5"

nalgebra = { version = "0.33.0", features = ["serde-serialize"] }

thiserror = "1.0.60"

criterion = "0.5.1"
serde_qs = { version = "0.13.0", features = ["actix4"] }

[[bench]]
name = "bench"
harness = false
