[package]
name = "ternary"
version = "0.2.0"
authors = ["inthar-raven <serotoceprafen@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
stacker = "0.1.15"

itertools = "0.13.0"

num-traits = "0.2.19"
num-integer = "0.1.46"
num-bigint = "0.4.5"

nalgebra = { version = "0.33.0", features = ["serde-serialize"] }

thiserror = "1.0.60"

wasm-bindgen = "0.2.93"
serde = { version = "1.0.208", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dependencies.web-sys]
version = "0.3"
features = ['Document', 'Element', 'HtmlElement', 'Node', 'Window']

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
