[package]
name = "ternary"
version = "0.4.0"
authors = ["inthar-raven <serotoceprafen@gmail.com>"]
edition = "2024"


[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
stacker = "0.1.15"

itertools = "0.14.0"

num-traits = "0.2.19"
num-integer = "0.1.46"
num-bigint = "0.4.5"

thiserror = "2.0.3"

wasm-bindgen = "0.2.106"
serde = { version = "1.0.208", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dependencies.web-sys]
version = "0.3"
features = ['Document', 'Element', 'HtmlElement', 'Node', 'Window']

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os", "--all-features"]